Add registration and error message
