# controllers/base.go
@@ -2,25 +2,25 @@ package controllers
 
 import (
 	"github.com/jinzhu/gorm"
-	"github.com/khuongnguyenBlue/vine/app/auth"
+	"github.com/khuongnguyenBlue/vine/app/session"
 	"github.com/khuongnguyenBlue/vine/app/exam"
 	"github.com/khuongnguyenBlue/vine/app/subject"
 )
 
 type Controller struct {
-	AuthService auth.Service
+	SessionService session.Service
 	SubjectService subject.Service
-	ExamService exam.Service
+	ExamService    exam.Service
 }
 
 func NewController(db *gorm.DB) *Controller {
-	authService := auth.NewService(auth.NewPgsqlRepository(db))
+	sessionService := session.NewService(session.NewPgsqlRepository(db))
 	subjectService := subject.NewService(subject.NewPgsqlRepository(db))
 	examService := exam.NewService(exam.NewPgsqlRepository(db))
 
 	return &Controller{
-		AuthService: authService,
+		SessionService: sessionService,
 		SubjectService: subjectService,
-		ExamService: examService,
+		ExamService:    examService,
 	}
 }
